--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
 
-    implementation project(':XDialog')
+//    implementation project(':XDialog')
+    implementation('com.yazao:xdialog:1.0.0')
 
 }
