--- a/gradle.properties
+++ b/gradle.properties
@@ -6,16 +6,62 @@
 # http://www.gradle.org/docs/current/userguide/build_environment.html
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx2048m
+org.gradle.jvmargs=-Xmx1536m
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 # AndroidX package structure to make it clearer which packages are bundled with the
-# Android operating system, and which are packaged with your app"s APK
+# Android operating system, and which are packaged with your app's APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
-# Kotlin code style for this project: "official" or "obsolete":
-kotlin.code.style=official
+
+
+# nexus - maven
+#对应maven的groupId值，如果名字中包含SNAPSHOT字符，项目将会发布到snapshots仓库，没有则发布到releases仓库
+#PUBLISH_GROUP_ID=com.yazao
+PUBLISH_GROUP_ID=io.github.yueliangrensheng
+#artifact
+PUBLISH_ARTIFACT_ID=xdialog
+#版本号
+PUBLISH_VERSION=1.0.1
+#上传类型 固定library
+POM_ARTIFACT_ID=library
+#前面配置的releases仓库地址
+#RELEASE_REPOSITORY_URL=http://10.0.26.32:8081/repository/moon/
+#RELEASE_REPOSITORY_URL=/Users/zhaishaoping/Documents/work/repository/
+RELEASE_REPOSITORY_URL=/Users/zhaishaoping/.m2/repository/
+#账号密码
+NEXUS_USERNAME=admin
+NEXUS_PASSWORD=admin123
+
+
+
+# sonatype - MavenCenter
+#PUBLISH_GROUP_ID=com.yazao
+#artifact
+#PUBLISH_ARTIFACT_ID=xbase
+#版本号
+#PUBLISH_VERSION=1.0.7.1
+#项目名称
+PUBLISH_PROJECT_NAME=xdialog
+#项目描述
+PUBLISH_DESCRIPTION=a XDialog weight for Android.
+#项目地址（Github地址）If your project has a dedicated site, use its URL here
+PUBLISH_PROJECT_URL=https://github.com/yueliangrensheng/XDialog
+# git connection (scm:git:github.com/xx/xx.git)
+PUBLISH_SCM_CONNECTION=scm:git:github.com/yueliangrensheng/XDialog.git
+# git developerConnection (scm:git:ssh://github.com/xx/xx.git)
+PUBLISH_SCM_DEVELOPER_CONNECTION=scm:git:ssh://github.com/yueliangrensheng/XDialog.git
+# git 分支地址 （https://github.com/xxx/xxxx/tree/master）
+PUBLISH_GIT_BRANCH_MASTER=https://github.com/yueliangrensheng/XDialog/tree/master
+# pom developer id 用户ID
+PUBLISH_POM_DEVELOPER_ID=shaopingzhai
+# pom developer name 用户名
+PUBLISH_POM_DEVELOPER_NAME=moonlife
+# pom developer email 邮箱
+PUBLISH_POM_DEVELOPER_EMAIL=shaopingzhai@163.com
+
+
