--- a/build.gradle
+++ b/build.gradle
@@ -9,9 +9,6 @@ buildscript {
         classpath "com.android.tools.build:gradle:3.6.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
-        //jCenter 新添加
-        classpath 'com.novoda:bintray-release:0.9.2'
-
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -28,7 +25,7 @@ allprojects {
         options.addStringOption('Xdoclint:none', '-quiet')
         options.addStringOption('encoding', 'UTF-8')
     }
-    tasks.getByPath(":XDialog:javadocRelease").enabled = false
+//    tasks.getByPath(":XDialog:javadocRelease").enabled = false
 
 }
 
